<resources>
    <string name="app_name">MikeAir</string>

    <!-- labels -->
    <string name="label_search_title">Travel information</string>
    <string name="label_search_origin_station">Origin station</string>
    <string name="label_search_destination_station">Destination station</string>
    <string name="label_search_departure_date">Departure date</string>
    <string name="label_date_dd">dd</string>
    <string name="label_date_mm">mm</string>
    <string name="label_date_yyyy">yyyy</string>
    <string name="label_search_adults">Number of adults</string>
    <string name="label_search_teens">Number of teens</string>
    <string name="label_search_children">Number of children</string>
    <string name="label_search_action">Search</string>
    <string name="label_results_price_filter">Price filter</string>
    <string name="label_details_title">Flight information</string>

    <string name="toast_generic_error">Something went wrong. Please, try again</string>
    <string name="toast_invalid_fields_error">Please, fill all fields with valid values</string>

    <string name="intent_key_flight_results">intent_key_flight_results</string>
    <string name="intent_key_flight_details">intent_key_flight_details</string>
</resources>