<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_search_title"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/originStationLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconMode="dropdown_menu"
                app:hintTextColor="@color/colorGrayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintWidth_percent="0.8">

                <AutoCompleteTextView
                    android:id="@+id/originStationAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_search_origin_station"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/destinationStationLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorGrayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/originStationLayout"
                app:layout_constraintWidth_percent="0.8">

                <AutoCompleteTextView
                    android:id="@+id/destStationAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_search_destination_station"
                    android:inputType="none"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/departureDateTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:layout_marginStart="10dp"
                android:text="@string/label_search_departure_date"
                android:textColor="@color/colorGrayDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/destinationStationLayout"
                app:layout_constraintWidth_percent="0.8" />

            <CalendarView
                android:id="@+id/departureDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_between_inputs"
                app:layout_constraintTop_toBottomOf="@id/departureDateTitle"
                app:layout_constraintWidth_percent="0.8"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adultsCountLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/label_search_adults"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/colorGrayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/departureDate"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adultsCountEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teensCountLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/label_search_teens"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/colorGrayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adultsCountLayout"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teensCountEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/childrenCountLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_inputs"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/label_search_children"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/colorGrayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teensCountLayout"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/childrenCountEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/label_search_action"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/childrenCountLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryTransparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/loading_size"
            android:layout_height="@dimen/loading_size"
            android:layout_gravity="center"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="plane_animation.json"
            app:lottie_loop="true"
            app:lottie_speed="2" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>